compiler.v3/src/main/java/cosc470/compiler/v3/antlr/GrammarV3Parser.java
// $ANTLR 3.5.2 C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g 2015-05-08 04:02:09

  package cosc470.compiler.v3.antlr;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class GrammarV3Parser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "'%'", "'&'", "'('", "')'", "'*'", 
		"'+'", "'-'", "'/'", "':='", "';'", "'<'", "'<='", "'<>'", "'=='", "'>'", 
		"'>='", "'BEGIN'", "'BOOLEAN'", "'CHAR'", "'DBMS_OUTPUT.NEW_LINE'", "'DBMS_OUTPUT.PUT'", 
		"'DBMS_OUTPUT.PUT_LINE'", "'DECLARE'", "'END IF'", "'END LOOP'", "'END'", 
		"'FALSE'", "'IF BEGIN'", "'LOOP'", "'NOT'", "'NULL'", "'NUMBER'", "'POSITIVE'", 
		"'SMALLINT'", "'THEN'", "'TRUE'", "'VARCHAR2'", "'WHILE'", "'\\\\'", "'c'", 
		"'identifier'", "'num'", "'string_literal'"
	};
	public static final int EOF=-1;
	public static final int T__4=4;
	public static final int T__5=5;
	public static final int T__6=6;
	public static final int T__7=7;
	public static final int T__8=8;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public GrammarV3Parser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public GrammarV3Parser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return GrammarV3Parser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g"; }



	// $ANTLR start "block"
	// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:15:1: block : declarations compound_statement end_program ;
	public final void block() throws RecognitionException {
		try {
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:15:6: ( declarations compound_statement end_program )
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:15:8: declarations compound_statement end_program
			{
			pushFollow(FOLLOW_declarations_in_block38);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_compound_statement_in_block40);
			compound_statement();
			state._fsp--;

			pushFollow(FOLLOW_end_program_in_block42);
			end_program();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "block"



	// $ANTLR start "declarations"
	// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:17:1: declarations : ( 'DECLARE' declare_rest | empty );
	public final void declarations() throws RecognitionException {
		try {
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:17:13: ( 'DECLARE' declare_rest | empty )
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==26) ) {
				alt1=1;
			}
			else if ( (LA1_0==7||(LA1_0 >= 9 && LA1_0 <= 10)||(LA1_0 >= 13 && LA1_0 <= 20)||(LA1_0 >= 27 && LA1_0 <= 29)||LA1_0==32||LA1_0==38) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:17:15: 'DECLARE' declare_rest
					{
					match(input,26,FOLLOW_26_in_declarations49); 
					pushFollow(FOLLOW_declare_rest_in_declarations51);
					declare_rest();
					state._fsp--;

					}
					break;
				case 2 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:17:38: empty
					{
					pushFollow(FOLLOW_empty_in_declarations53);
					empty();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarations"



	// $ANTLR start "declare_rest"
	// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:19:1: declare_rest : ( identifier type end_block declare_rest | empty );
	public final void declare_rest() throws RecognitionException {
		try {
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:19:13: ( identifier type end_block declare_rest | empty )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==44) ) {
				alt2=1;
			}
			else if ( (LA2_0==7||(LA2_0 >= 9 && LA2_0 <= 10)||(LA2_0 >= 13 && LA2_0 <= 20)||(LA2_0 >= 27 && LA2_0 <= 29)||LA2_0==32||LA2_0==38) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:19:15: identifier type end_block declare_rest
					{
					pushFollow(FOLLOW_identifier_in_declare_rest60);
					identifier();
					state._fsp--;

					pushFollow(FOLLOW_type_in_declare_rest62);
					type();
					state._fsp--;

					pushFollow(FOLLOW_end_block_in_declare_rest64);
					end_block();
					state._fsp--;

					pushFollow(FOLLOW_declare_rest_in_declare_rest66);
					declare_rest();
					state._fsp--;

					}
					break;
				case 2 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:19:54: empty
					{
					pushFollow(FOLLOW_empty_in_declare_rest68);
					empty();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declare_rest"



	// $ANTLR start "type"
	// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:21:1: type : data_type default_mis ;
	public final void type() throws RecognitionException {
		try {
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:21:5: ( data_type default_mis )
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:21:7: data_type default_mis
			{
			pushFollow(FOLLOW_data_type_in_type76);
			data_type();
			state._fsp--;

			pushFollow(FOLLOW_default_mis_in_type78);
			default_mis();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "type"



	// $ANTLR start "default_mis"
	// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:23:1: default_mis : ( equals right_hand_side | empty );
	public final void default_mis() throws RecognitionException {
		try {
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:23:12: ( equals right_hand_side | empty )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==12) ) {
				alt3=1;
			}
			else if ( (LA3_0==7||(LA3_0 >= 9 && LA3_0 <= 10)||(LA3_0 >= 13 && LA3_0 <= 20)||(LA3_0 >= 27 && LA3_0 <= 29)||LA3_0==32||LA3_0==38) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:23:14: equals right_hand_side
					{
					pushFollow(FOLLOW_equals_in_default_mis85);
					equals();
					state._fsp--;

					pushFollow(FOLLOW_right_hand_side_in_default_mis87);
					right_hand_side();
					state._fsp--;

					}
					break;
				case 2 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:23:37: empty
					{
					pushFollow(FOLLOW_empty_in_default_mis89);
					empty();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "default_mis"



	// $ANTLR start "data_type"
	// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:25:1: data_type : ( characters | numbers | 'BOOLEAN' );
	public final void data_type() throws RecognitionException {
		try {
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:25:10: ( characters | numbers | 'BOOLEAN' )
			int alt4=3;
			switch ( input.LA(1) ) {
			case 22:
			case 40:
				{
				alt4=1;
				}
				break;
			case 35:
			case 36:
			case 37:
				{
				alt4=2;
				}
				break;
			case 21:
				{
				alt4=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:25:12: characters
					{
					pushFollow(FOLLOW_characters_in_data_type96);
					characters();
					state._fsp--;

					}
					break;
				case 2 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:25:24: numbers
					{
					pushFollow(FOLLOW_numbers_in_data_type99);
					numbers();
					state._fsp--;

					}
					break;
				case 3 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:25:32: 'BOOLEAN'
					{
					match(input,21,FOLLOW_21_in_data_type101); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "data_type"



	// $ANTLR start "characters"
	// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:27:1: characters : ( 'CHAR' | 'VARCHAR2' size );
	public final void characters() throws RecognitionException {
		try {
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:27:11: ( 'CHAR' | 'VARCHAR2' size )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==22) ) {
				alt5=1;
			}
			else if ( (LA5_0==40) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:27:13: 'CHAR'
					{
					match(input,22,FOLLOW_22_in_characters108); 
					}
					break;
				case 2 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:27:20: 'VARCHAR2' size
					{
					match(input,40,FOLLOW_40_in_characters110); 
					pushFollow(FOLLOW_size_in_characters112);
					size();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "characters"



	// $ANTLR start "numbers"
	// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:29:1: numbers : ( 'NUMBER' size | 'SMALLINT' size | 'POSITIVE' size );
	public final void numbers() throws RecognitionException {
		try {
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:29:8: ( 'NUMBER' size | 'SMALLINT' size | 'POSITIVE' size )
			int alt6=3;
			switch ( input.LA(1) ) {
			case 35:
				{
				alt6=1;
				}
				break;
			case 37:
				{
				alt6=2;
				}
				break;
			case 36:
				{
				alt6=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:29:10: 'NUMBER' size
					{
					match(input,35,FOLLOW_35_in_numbers119); 
					pushFollow(FOLLOW_size_in_numbers121);
					size();
					state._fsp--;

					}
					break;
				case 2 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:29:24: 'SMALLINT' size
					{
					match(input,37,FOLLOW_37_in_numbers123); 
					pushFollow(FOLLOW_size_in_numbers125);
					size();
					state._fsp--;

					}
					break;
				case 3 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:29:41: 'POSITIVE' size
					{
					match(input,36,FOLLOW_36_in_numbers128); 
					pushFollow(FOLLOW_size_in_numbers130);
					size();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "numbers"



	// $ANTLR start "size"
	// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:31:1: size : semicolon_left num semicolon_right ;
	public final void size() throws RecognitionException {
		try {
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:31:5: ( semicolon_left num semicolon_right )
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:31:7: semicolon_left num semicolon_right
			{
			pushFollow(FOLLOW_semicolon_left_in_size137);
			semicolon_left();
			state._fsp--;

			pushFollow(FOLLOW_num_in_size139);
			num();
			state._fsp--;

			pushFollow(FOLLOW_semicolon_right_in_size141);
			semicolon_right();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "size"



	// $ANTLR start "compound_statement"
	// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:33:1: compound_statement : 'BEGIN' optional_statements 'END' end_block ;
	public final void compound_statement() throws RecognitionException {
		try {
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:33:19: ( 'BEGIN' optional_statements 'END' end_block )
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:33:21: 'BEGIN' optional_statements 'END' end_block
			{
			match(input,20,FOLLOW_20_in_compound_statement148); 
			pushFollow(FOLLOW_optional_statements_in_compound_statement150);
			optional_statements();
			state._fsp--;

			match(input,29,FOLLOW_29_in_compound_statement152); 
			pushFollow(FOLLOW_end_block_in_compound_statement154);
			end_block();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "compound_statement"



	// $ANTLR start "optional_statements"
	// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:35:1: optional_statements : ( 'NULL' end_block | statement_list );
	public final void optional_statements() throws RecognitionException {
		try {
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:35:20: ( 'NULL' end_block | statement_list )
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==34) ) {
				alt7=1;
			}
			else if ( (LA7_0==5||LA7_0==20||(LA7_0 >= 23 && LA7_0 <= 25)||LA7_0==31||LA7_0==41||LA7_0==44) ) {
				alt7=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}

			switch (alt7) {
				case 1 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:35:22: 'NULL' end_block
					{
					match(input,34,FOLLOW_34_in_optional_statements161); 
					pushFollow(FOLLOW_end_block_in_optional_statements163);
					end_block();
					state._fsp--;

					}
					break;
				case 2 :
					// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:35:40: statement_list
					{
					pushFollow(FOLLOW_statement_list_in_optional_statements166);
					statement_list();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "optional_statements"



	// $ANTLR start "statement_list"
	// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:37:1: statement_list : h i ;
	public final void statement_list() throws RecognitionException {
		try {
			// C:\\Users\\Reaper\\Documents\\NetBeansProjects\\Cosc470_Compiler_jpbutler0_V3\\compiler.v3\\src\\main\\java\\cosc470\\compiler\\v3\\antlr\\GrammarV3.g:37:15: ( h i )
